Ensure whitespace renders.

--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,7 @@ html, body {
   font-family: Consolas, monospace;
   font-size: 1em;
   color: #ffffff;
+  white-space: pre;
 }
 
 .gutter {
